--- a/AnexGram/src/apis/CoreApi/appsettings.json
+++ b/AnexGram/src/apis/CoreApi/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AnexGramConnection": "Server=(localdb)\\MSSQLLocalDB;Database=AnexGram;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
